--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.10.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "uuid": "^9.0.1",
-    "node-cron": "^3.0.3",
-    "axios": "^1.6.0",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "compression": "^1.7.4"
+    "helmet": "^7.1.0",
+    "node-cron": "^3.0.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -36,4 +36,4 @@
   ],
   "author": "Your Name",
   "license": "MIT"
-} 
+}
